form style fix
scrollbar on mobile

--- a/scss/form-style.scss
+++ b/scss/form-style.scss
@@ -711,15 +711,17 @@ footer {
         background-color: #eee;
 //        background-image: url(../images/form/Artboard%2043.png), url(../images/form/Artboard%2044.jpg);
         background-image: url(../images/form/laptop.svg), url(../images/form/phone-bg.png);
-        background-size: auto, 100%;
+        background-size: 500px,100%;
         background-repeat: no-repeat;
         background-position: top, top;
-        background-attachment: auto, fixed;
+        background-attachment: local, fixed;
         padding-top: 36vh;
 
         .page-content-wrapper {
             width: 100%;
-            background-color: transparent
+            background-color: transparent;
+            padding-left: 0;
+            padding-right: 0
         }
 
         //        .faded-dev {
@@ -780,7 +782,32 @@ footer {
     }
 
     @media (max-width: 500px) {
-//        background-size: contain, cover;
+        background-size: contain, 100%;
 //        padding-top: 33vh;
     }
+}
+
+/*scrollbar style to be always visible in mobile*/
+#policies-section ::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+#policies-section ::-webkit-scrollbar:vertical {
+    width: 12px;
+}
+
+#policies-section ::-webkit-scrollbar:horizontal {
+    height: 12px;
+}
+
+#policies-section ::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, .5);
+    border-radius: 10px;
+    border: 2px solid #ffffff;
+}
+
+#policies-section ::-webkit-scrollbar-track {
+//    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #eee;
 }
